# libplist

./: .gitignore  CMakeLists.txt
cmake/: libplist-config.cmake
include/plist/: Date.h  plist.h
src/: bplist.c  plist.h
